# drf-auth

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
books/: models.py  permissions.py  serializer.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_auto_20210110_1207.py
libraryapi_project/: asgi.py  settings.py  urls.py  wsgi.py
